--- a/src/App.css
+++ b/src/App.css
@@ -55,9 +55,9 @@ button {
   height: 745px;
 }
 .description {
-   position: fixed;
-   bottom: 135px;
-   right: 380px;
+   position: absolute;
+   bottom: -10px;
+   right: 200px;
 }
 .trend {
   margin-left: 10px;
