--- a/src/App.css
+++ b/src/App.css
@@ -1,82 +1,91 @@
-@import "./fonts.css";
-* {
+:root {
+  --font-main: "Poppins", sans-serif;
+  }
+  * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
-a{
+  }
+  a{
   text-decoration: none;
   color: inherit;
-}
-button {
+  }
+  button {
   border: none;
-}
-.header {
-  max-width: 100%;
-  font-family: "Poppins", sans-serif;
+  }
+  body {
+  font-family: var(--font-main);
+  }
+  .container {
+  margin: 0 auto;
+  max-width: 1130px;
+  padding: 0 20px;
+  }
+  .header {
+  font-family: var(--font-main);
   height: 82px;
-  box-shadow:  2px 2px 2px black ;
-}
-.header__container {
-    margin: 0 auto;
-    max-width: 1340px;
-    background-color: white;
-    padding: 20px 0;
-    border-radius: 30px;
-    display: flex;
-    justify-content: center;
-    justify-content: space-between;
-}
-.text-logo {
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  }
+  .text-logo {
   font-weight: 700;
   font-size: 28px;
   color: #22262a;
-}
-.header__menu {
-  margin-top: 7px;
-}
-.link {
+  }
+  .header__menu {
+  margin-top: 7px; 
+  }
+  .link {
   font-weight: 400;
   font-size: 18px;
   padding-left: 20px;
   color: #22262a;
-}
-.header__img {
+  }
+  .header__img {
   background-image:url(./log.jpg);
   width: 150px;
   height: 20px;
   background-repeat: no-repeat;
-}
-.hero {
-  font-family: "Poppins", sans-serif;
+  }
+  .hero {
+  background: url(./hero-img.jpg) no-repeat center/cover;
+  max-width: 1330px;
+  height: 730px;
   margin: 0 auto;
-  background: url(./hero-img.jpg);
-  max-width: 1520px;
-  height: 745px;
-}
-.description {
-   position: absolute;
-   bottom: -10px;
-   right: 200px;
-}
-.trend {
+  }
+  .hero .container {
+  padding: 100px 0;
+  height: 100%;
+  display: flex;
+  align-items: end;
+  justify-content: center;
+  }
+  .hero__wrapper {
+  width: 50%;
+  }
+  .description {
+  width: 50%;
+  }
+  .trend {
   margin-left: 10px;
   font-weight: 600;
   font-size: 18px;
   color: #22262a;
-}
-.title {
+  }
+  .title {
   font-weight: 700;
   font-size: 80px;
   color: #22262a;
-}
-.selection-cloth {
+  }
+  .selection-cloth {
   font-weight: 600;
   font-size: 18px;
   color: #22262a;
   margin-left: 10px;
-}
-.shop {
+  }
+  .shop {
   margin: 10px;
   width: 147px;
   height: 35px;
@@ -85,8 +94,8 @@ button {
   font-size: 18px;
   text-align: center;
   color: #fff;
-}
-.shop-2 {
+  }
+  .shop-2 {
   margin: 10px;
   width: 147px;
   height: 35px;
@@ -95,4 +104,66 @@ button {
   font-size: 18px;
   text-align: center;
   color: #fff;
-}
+  }
+  .title-girl {
+    font-weight: 700;
+    font-size: 20px;
+    text-align: center;
+    color: #22262a;
+  }
+  .title-brend {
+    margin-top: 30px;
+    font-weight: 400;
+    font-size: 15px;
+    text-align: center;
+    color: #22262a;
+  }
+  .section-girls {
+    height: calc(100vh - 82px);
+    padding-top: 30px;
+  }
+  .container-grid{
+    margin: 35px auto;
+    max-width: 1130px;
+    padding: 0 20px;
+  }
+  .section-girls > .grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
+  .card {
+    padding: 10px;
+  }
+  .card__img {
+    width: 268px;
+    height: 484px;
+  }
+  .card__img > img {
+     height: 100%;
+     width: 100%;
+     object-fit: contain;
+  }
+  .card__title {
+    font-weight: 300;
+    font-size: 15px;
+    color: #22262a;
+  }
+  .info-price {
+    display: flex;
+  }
+  .about-clothes {
+    font-weight: 600;
+    font-size: 15px;
+    color: #22262a;
+  }
+  .old-price {
+    font-weight: 400;
+    font-size: 15px;
+    color: #22262a;
+  }
+  .new-price {
+    margin-left: 40px;
+    font-weight: 400;
+    font-size: 15px;
+    color: #cf2929;
+  }
