--- a/src/App.css
+++ b/src/App.css
@@ -116,6 +116,12 @@
     text-align: center;
     color: #22262a;
   }
+  .title-men {
+    font-weight: 700;
+    font-size: 20px;
+    text-align: center;
+    color: #22262a;
+  }
   .title-brend {
     margin-top: 30px;
     font-weight: 400;
@@ -123,8 +129,8 @@
     text-align: center;
     color: #22262a;
   }
-  .section-girls {
-    height: calc(100vh - 82px);
+  .section-men {
+    height: calc(130vh - 82px);
     padding-top: 30px;
   }
   .container-grid{
@@ -134,11 +140,16 @@
   }
   .section-girls > .grid {
     display: grid;
+    height: 101vh;
     grid-template-columns: repeat(4, 1fr);
+    column-gap: 40px;
   }
-  .card {
-    padding: 10px;
+  .section-men > .grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 40px;
   }
+
   .card__img {
     width: 268px;
     height: 484px;
@@ -152,6 +163,7 @@
     font-weight: 300;
     font-size: 15px;
     color: #22262a;
+    cursor: pointer;
   }
   .info-price {
     display: flex;
@@ -228,3 +240,5 @@
 .Timer {
   margin-left: 660px;
 }
+
+
